--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="google-site-verification" content="zTw8z9dronXrkKtpzHrPIqjo8Fixjg_X4vhx8z839-o" />
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="description" content="Site of youtube chanel OldGames.com.">
     <meta name="keywords" content="OldGames.com">
