--- a/trchronicles.html
+++ b/trchronicles.html
@@ -4,7 +4,7 @@
  <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="description" content="Site of youtube chanel OldGames.com.">
     <meta name="keywords" content="OldGames.com">
-    <title>OldGames.com</title>
+    <title>OldGamme.ru - Всё об играх</title>
     <link rel="stylesheet" href="css/style.css" type="text/css">
 	<!--[if IE]>
 		<link rel="stylesheet" href="css/ie.css" type="text/css" charset="utf-8">
@@ -96,7 +96,7 @@ function MM_swapImage() { //v3.0
 				</li>
 			</ul>
 			<p id="footnote">
-				©OldGames.com, Все права защищены. 
+				©OldGamme.ru, Все права защищены. 
 			</p>
 </div>
 	</div>
