--- a/witcher2.html
+++ b/witcher2.html
@@ -4,7 +4,7 @@
 <meta name="description" content="Original home of Lara Croft and Tomb Raider. Discover more about the company and the games developed by Core Design.">
 <meta name="keywords" content="Core,Design,Lara,Croft,Tomb,Raider">
 	<meta charset="UTF-8">
-	<title>Core Design</title>
+	<title>OldGamme.ru - Всё об играх</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 	<!--[if IE]>
 		<link rel="stylesheet" href="css/ie.css" type="text/css" charset="utf-8">
@@ -177,7 +177,7 @@ Silk-film.png	Геймплей «The Witcher 2» на сайте YouTube
 				</li>
 			</ul>
 			<p id="footnote">
-				© OldGames Hunter. Все права защищены.
+				©OldGamme.ru. Все права защищены.
 			</p>
 </div>
 	</div>
