--- a/witcher2prohozhdenie.html
+++ b/witcher2prohozhdenie.html
@@ -4,7 +4,7 @@
 <meta name="description" content="Original home of Lara Croft and Tomb Raider. Discover more about the company and the games developed by Core Design.">
 <meta name="keywords" content="Core,Design,Lara,Croft,Tomb,Raider">
 	<meta charset="UTF-8">
-	<title>oldgames.com</title>
+	<title>OldGamme.ru - Всё об играх</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 	<!--[if IE]>
 		<link rel="stylesheet" href="css/ie.css" type="text/css" charset="utf-8">
@@ -135,7 +135,7 @@ function MM_swapImage() { //v3.0
 				</li>
 			</ul>
 			<p id="footnote">
-				© oldgames.com. Все права защищены.
+				©OldGamme.ru. Все права защищены.
 			</p>
 </div>
 	</div>
