--- a/article132.html
+++ b/article132.html
@@ -4,7 +4,7 @@
  <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="description" content="Site of youtube chanel OldGames.com.">
     <meta name="keywords" content="OldGames.com">
-    <title>OldGames.com</title>
+    <title>OldGamme.ru - Всё об играх</title>
     <link rel="stylesheet" href="css/style.css" type="text/css">
 	<style type="text/css">
 	a:visited {
@@ -114,7 +114,7 @@ a:active {
 				</li>
 		  </ul>
 			<p id="footnote">
-				©OldGames.com, Все права защищены. 
+				©OldGamme.ru, Все права защищены. 
 			</p>
 	  </div>
 	  
