--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="description" content="Site of youtube chanel OldGames.com.">
     <meta name="keywords" content="OldGames.com">
-    <title>oldgames.com</title>
+    <title>OldGamme.ru - Всё об играх</title>
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <!--[if IE]>
 		<link rel="stylesheet" href="css/ie.css" type="text/css" charset="utf-8">	<![endif]-->
@@ -212,7 +212,7 @@ function MM_swapImage() { //v3.0
           </div>
           <div class="box">
         </ul>
-        <p id="footnote"> ©oldgames.com, Все права защищены. 
+        <p id="footnote"> ©OldGamme.ru, Все права защищены. 
       </div>
     </div>
   </body>
