--- a/mafia1.html
+++ b/mafia1.html
@@ -4,7 +4,7 @@
 <meta name="description" content="Original home of Lara Croft and Tomb Raider. Discover more about the company and the games developed by Core Design.">
 <meta name="keywords" content="Core,Design,Lara,Croft,Tomb,Raider">
 	<meta charset="utf-8">
-	<title>oldgames.com</title>
+	<title>OldGamme.ru - Всё об играх</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 	<style type="text/css">
 	a:visited {
@@ -104,7 +104,7 @@ a:active {
 				</li>
 		  </ul>
 			<p id="footnote">
-				© oldgames.com. Все права защищены.
+				©OldGamme.ru. Все права защищены.
 			</p>
 	  </div>
 	</div>
