--- a/witcher2.html
+++ b/witcher2.html
@@ -32,6 +32,7 @@ function MM_swapImage() { //v3.0
    if ((x=MM_findObj(a[i]))!=null){document.MM_sr[j++]=x; if(!x.oSrc) x.oSrc=x.src; x.src=a[i+2];}
 }
 </script>
+<link rel="icon" href="trisslogo.ico" type="images/x-icon">
 </head>
 <body onLoad="MM_preloadImages('images/buttongamesynopsisb.png','images/buttonlevelsb.png','images/buttonunfinishedbusinessb.png','images/buttonthegoldenmaskb.png','images/buttonthelostartifactb.png','images/buttongoodiesb.png','images/buttonthetimesb.png','images/buttonleveleditorb.png','images/buttonthedvdgameb.png')" oncontextmenu="return false;">
 	<div id="page">
