--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta name="google-site-verification" content="zTw8z9dronXrkKtpzHrPIqjo8Fixjg_X4vhx8z839-o" />
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <meta name="description" content="Site of youtube chanel OldGames.com.">
-    <meta name="keywords" content="OldGames.com">
+    <meta name="description" content="Site of youtube chanel OldGamьу.ru.">
+    <meta name="keywords" content="OldGamme.ru">
     <title>OldGamme.ru - Всё об играх</title>
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <!--[if IE]>
