--- a/index.html
+++ b/index.html
@@ -167,7 +167,8 @@ function MM_swapImage() { //v3.0
 
 			  <h2>Сайт создан 28.12.2008<h2>           
             </div>
-			1
+			
+			<h2>Наш Дискорд: 801387631094005770<h2>
           </div>
           <div id="updates" class="box">
             <h2>Следующий обзор</h2>
