--- a/index.html
+++ b/index.html
@@ -167,8 +167,9 @@ function MM_swapImage() { //v3.0
 
 			  <h2>Сайт создан 28.12.2008<h2>           
             
-			<h2>Наш Дискорд: 801387631094005770<h2>
+			<h2>Наш Дискорд: https://discord.gg/Ae4ZMHRV2j<h2>
           </div>
+		  <div>
           <div id="updates" class="box">
             <h2>Следующий обзор</h2>
             <ul style="font-family: Segoe, 'Segoe UI', 'DejaVu Sans', 'Trebuchet MS', Verdana, sans-serif; color: #FFFFFF; font-size: 14px; text-align: center;">
