--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ function MM_swapImage() { //v3.0
             
 			<h2>Наш Дискорд: https://discord.gg/Ae4ZMHRV2j<h2>
           </div>
-		  <div>
+		  </div>
           <div id="updates" class="box">
             <h2>Следующий обзор</h2>
             <ul style="font-family: Segoe, 'Segoe UI', 'DejaVu Sans', 'Trebuchet MS', Verdana, sans-serif; color: #FFFFFF; font-size: 14px; text-align: center;">
