--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="google-site-verification" content="zTw8z9dronXrkKtpzHrPIqjo8Fixjg_X4vhx8z839-o" />
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <meta name="description" content="Site of youtube chanel OldGamьу.ru.">
+    <meta name="description" content="Site of youtube chanel OldGamesHunter.">
     <meta name="keywords" content="OldGamme.ru">
     <title>OldGamme.ru - Всё об играх</title>
     <link rel="stylesheet" href="css/style.css" type="text/css">
@@ -37,7 +37,7 @@ function MM_swapImage() { //v3.0
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-51357656-1', 'core-design.com');
+  ga('create', 'UA-51357656-1', 'oldgamme.ru');
   ga('send', 'pageview');
 
 </script><!-- Start WOWSlider.com HEAD section -->
