--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta name="google-site-verification" content="zTw8z9dronXrkKtpzHrPIqjo8Fixjg_X4vhx8z839-o" />
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <meta name="description" content="Site of youtube chanel OldGamesHunter.">
-    <meta name="keywords" content="OldGamme.ru">
-    <title>OldGamme.ru - Всё об играх</title>
+    <meta name="description" content="Site of youtube chanel OldGames.com.">
+    <meta name="keywords" content="OldGames.com">
+    <title>oldgames.com</title>
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <!--[if IE]>
 		<link rel="stylesheet" href="css/ie.css" type="text/css" charset="utf-8">	<![endif]-->
@@ -37,7 +36,7 @@ function MM_swapImage() { //v3.0
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-51357656-1', 'oldgamme.ru');
+  ga('create', 'UA-51357656-1', 'core-design.com');
   ga('send', 'pageview');
 
 </script><!-- Start WOWSlider.com HEAD section -->
@@ -165,9 +164,10 @@ function MM_swapImage() { //v3.0
             <div id="newsletter" class="box">
               <h2>О сайте:</h2>
 
-			  <h2>Сайт создан 28.12.2020<h2>           
-             </div>
-			 </div>
+			  <h2>Сайт создан 28.12.2008<h2>           
+            </div>
+			1
+          </div>
           <div id="updates" class="box">
             <h2>Следующий обзор</h2>
             <ul style="font-family: Segoe, 'Segoe UI', 'DejaVu Sans', 'Trebuchet MS', Verdana, sans-serif; color: #FFFFFF; font-size: 14px; text-align: center;">
@@ -212,7 +212,7 @@ function MM_swapImage() { //v3.0
           </div>
           <div class="box">
         </ul>
-        <p id="footnote"> ©OldGamme.ru, Все права защищены. 
+        <p id="footnote"> ©oldgames.com, Все права защищены. 
       </div>
     </div>
   </body>
