--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="description" content="Site of youtube chanel OldGames.com.">
-    <meta name="keywords" content="OldGames.com">
+    <meta name="keywords" content="OldGamme.ru - Всё об играх">
     <title>oldgames.com</title>
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <!--[if IE]>
