--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="description" content="Site of youtube chanel OldGames.com.">
     <meta name="keywords" content="OldGamme.ru - Всё об играх">
-    <title>oldgames.com</title>
+    <title>OldGamme.ru - Всё об играх</title>
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <!--[if IE]>
 		<link rel="stylesheet" href="css/ie.css" type="text/css" charset="utf-8">	<![endif]-->
